; ModuleID = '/home/carl/AnghaBench/vlc/modules/misc/playlist/extr_m3u.c_Export_M3U8.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/misc/playlist/extr_m3u.c_Export_M3U8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_playlist_export = type { i32 }

@.str = private unnamed_addr constant [25 x i8] c"saving using M3U8 format\00", align 1
@fprintf = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Export_M3U8(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.vlc_playlist_export*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to %struct.vlc_playlist_export*
  store %struct.vlc_playlist_export* %5, %struct.vlc_playlist_export** %3, align 8
  %6 = load %struct.vlc_playlist_export*, %struct.vlc_playlist_export** %3, align 8
  %7 = call i32 @msg_Dbg(%struct.vlc_playlist_export* %6, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.vlc_playlist_export*, %struct.vlc_playlist_export** %3, align 8
  %9 = load i32, i32* @fprintf, align 4
  %10 = call i32 @DoExport(%struct.vlc_playlist_export* %8, i32 %9)
  %11 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %11
}

declare dso_local i32 @msg_Dbg(%struct.vlc_playlist_export*, i8*) #1

declare dso_local i32 @DoExport(%struct.vlc_playlist_export*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
